--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="datawedge_intent_key_data">com.symbol.datawedge.data_string</string>
     <string name="title_activity_settings">Settings</string>
     <string name="scan">Scan a barcode...</string>
+    <string name="fda_scan">Scan a UPC or enter a search term...</string>
 
     <!-- Preference Titles -->
     <string name="service_settings">Service Settings</string>
